test/bad/incompatible-print-param.mac



int main() {
    print << foo;
    return 0;
}


int foo() {
    return 0;
}